--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -63,12 +63,15 @@
         <img
           class="divider"
           src="../images/tents/the-north-face-talus-tent-4-person-3-season-in-golden-oak-saffron-yellow~p~985rf_01~320.jpg"
-          alt="Talus Tent - 4-Person, 3-Season" id="productImage"
+          alt="Talus Tent - 4-Person, 3-Season"
+          id="productImage"
         />
 
         <p class="product-card__price" id="productPrice">$199.99</p>
 
-        <p class="product__color" id="productColor">Golden Oak/Saffron Yellow</p>
+        <p class="product__color" id="productColor">
+          Golden Oak/Saffron Yellow
+        </p>
 
         <p class="product__description" id="productDesc">
           Enjoy a fun night under stars with your favorite people in The North
