Added css and updated the cart function to hide or show total if there are items in the cart.

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -24,7 +24,9 @@
         <ul class="product-list">
         </ul>
       </section>
-      <h3 id="cart-total" class="cart-total">Total: $0.00</h3>
+      <div class="cart-footer-hide">
+        <h3 id="cart-total" class="cart-total">Total: $0.00</h3>
+      </div>
     </main>
 
     <footer id="main-footer">&copy;NOT a real business</footer>
