Updated addToCart function to increment quantity if trying to add a duplicate item.

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
   </head>
 
   <body>
-    <header class="divider" id="main-header">
-    </header>
+    <header class="divider" id="main-header"></header>
     <main class="divider">
       <div class="hero">
         <img
@@ -34,37 +33,25 @@
         <ul class="product-list">
           <li class="listing-card">
             <a href="product_listing/?category=tents">
-              <img
-                src="images/category-tents.svg"
-                alt="Tents"
-              />
+              <img src="images/category-tents.svg" alt="Tents" />
               <h2 class="card__name">Tents</h2>
             </a>
           </li>
           <li class="listing-card">
             <a href="product_listing/?category=backpacks">
-              <img
-                src="images/category-backpacks.svg"
-                alt="Backpacks"
-              />
+              <img src="images/category-backpacks.svg" alt="Backpacks" />
               <h2 class="card__name">Backpacks</h2>
             </a>
           </li>
           <li class="listing-card">
             <a href="product_listing/?category=sleeping-bags">
-              <img
-                src="images/category-sleepingbags.svg"
-                alt="Sleeping Bags"
-              />
+              <img src="images/category-sleepingbags.svg" alt="Sleeping Bags" />
               <h2 class="card__name">Sleeping Bags</h2>
             </a>
           </li>
           <li class="listing-card">
             <a href="product_listing/?category=hammocks">
-              <img
-                src="images/category-hammocks.svg"
-                alt="Hammocks"
-              />
+              <img src="images/category-hammocks.svg" alt="Hammocks" />
               <h2 class="card__name">Hammocks</h2>
             </a>
           </li>
