--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -14,15 +14,13 @@
   </head>
 
   <body>
-    <header class="divider" id="main-header">
-    </header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="products">
         <h2>My Cart</h2>
 
-        <ul class="product-list">
-        </ul>
+        <ul class="product-list"></ul>
       </section>
       <div class="cart-footer-hide">
         <h3 id="cart-total" class="cart-total">Total: $0.00</h3>
