--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -25,6 +25,9 @@
       <div class="cart-footer-hide">
         <h3 id="cart-total" class="cart-total">Total: $0.00</h3>
       </div>
+      <div class="cart-buttons-hide">
+        <button id="checkout-button">Proceed to Checkout</button>
+      </div>
     </main>
 
     <footer id="main-footer">&copy;NOT a real business</footer>
