--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -21,7 +21,7 @@
       </section>
       <section class="checkout">
         <form name="checkout-form" id="checkout-form">
-          <input type="hidden" name="orderDate" id="orderDate">
+          <input type="hidden" name="orderDate" id="orderDate" />
           <fieldset>
             <legend>Customer Information</legend>
             <label for="fname">First Name:</label>
@@ -29,7 +29,7 @@
             <label for="lname">Last Name:</label>
             <input type="text" id="lname" name="lname" required />
           </fieldset>
-          <fieldset> 
+          <fieldset>
             <legend>Address</legend>
             <label for="street">Street Address:</label>
             <input type="text" id="street" name="street" required />
