--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
     <script src="../js/product-listing.js" type="module"></script>
   </head>
-<body>
+  <body>
     <header class="divider" id="main-header"></header>
     <main class="divider">
-        <div class="hero">
+      <div class="hero">
         <img
-            src="/images/banner-sm.jpg"
-            srcset="/images/banner-sm.jpg 500w, /images/banner.jpg"
-            alt="image of a high mountain lake"
+          src="/images/banner-sm.jpg"
+          srcset="/images/banner-sm.jpg 500w, /images/banner.jpg"
+          alt="image of a high mountain lake"
         />
-              <section class="products">
+      </div>
+      <section class="products">
         <h2 id="top-products">Top Products</h2>
-        <ul class="product-list">
-        </ul>
+        <ul class="product-list"></ul>
       </section>
     </main>
     <footer id="main-footer">&copy;NOT a real business</footer>
-</body>
+  </body>
 </html>
